# SaasSDR

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  alembic.ini  entrypoint.sh  migrate.sh  package-lock.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_agent_event_logs.py
backend/app/: config.py  main.py
backend/app/api/v1/: agents.py  health.py  settings.py  webhooks.py
backend/app/core/: auth.py  celery_app.py  crypto.py  db.py
backend/app/models/: __init__.py  agent.py  agent_log.py  base.py  contact.py  conversation.py  credentials.py  knowledge.py  learning.py  message.py  onboarding.py  tenant.py  user.py  webhook.py
backend/app/prompts/: onboarder.py
backend/app/schemas/: agent.py  common.py  settings.py
backend/app/tasks/: learning.py  messages.py  supervisor.py
frontend/: .env.local.example  Dockerfile  instrumentation.ts  middleware.ts  next.config.ts  nixpacks.toml  package-lock.json  package.json  railway.toml
frontend/app/: globals.css  layout.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/agents/: page.tsx
frontend/app/(app)/agents/[id]/: page.tsx
frontend/app/(app)/agents/[id]/test/: page.tsx
frontend/app/(app)/agents/new/: page.tsx
frontend/app/(app)/billing/: page.tsx
frontend/app/(app)/crm/: page.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/inbox/: page.tsx
frontend/app/(app)/knowledge/: page.tsx
frontend/app/(app)/learning/: page.tsx
frontend/app/(app)/settings/: page.tsx
frontend/app/(auth)/sign-in/[[...sign-in]]/: page.tsx
frontend/app/(auth)/sign-up/[[...sign-up]]/: page.tsx
frontend/app/api/backend/[...path]/: route.ts
frontend/app/api/ping/: route.ts
frontend/components/: providers.tsx
frontend/components/features/: sidebar.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
frontend/lib/: api.ts  utils.ts
