[project]
name = "convo-backend"
version = "0.1.0"
description = "Convo — SaaS de agentes SDR para WhatsApp"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # ORM + DB
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.6",
    # Pydantic
    "pydantic>=2.10.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Celery + Redis
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    # HTTP client
    "httpx>=0.28.0",
    # Auth + Crypto
    "PyJWT[crypto]>=2.10.0",
    "cryptography>=44.0.0",
    "clerk-backend-api>=1.4.0",
    # LLM SDKs (usados pelos serviços internos do Convo — onboarder/supervisor)
    "anthropic>=0.40.0",
    "openai>=1.58.0",
    # Observabilidade
    "logfire[fastapi]>=2.0.0",
    "sentry-sdk[fastapi]>=2.19.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    # Type stubs
    "types-redis>=4.6.0",
    "sqlalchemy[mypy]>=2.0.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# =============================================================================
# Ruff
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long — ruff format cuida disso
    "B008",  # do not perform function calls in default arguments (FastAPI usa isso)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

# =============================================================================
# Mypy
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["celery.*", "logfire.*", "pgvector.*", "clerk_backend_api.*"]
ignore_missing_imports = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=60"
